--- a/package.json
+++ b/package.json
@@ -45,15 +45,19 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "midi-player-js": "^2.0.16",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "shadcn-dropzone": "^0.2.1",
     "sonner": "^1.7.1",
+    "soundfont-player": "^0.12.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
